# BigDataAnaysis

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  抖音电商竞品智能分析与AI素材工厂 - 项目文档.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: copywriting.py  dashboard.py  products.py  reviews.py
backend/app/core/: __init__.py  ai_service.py  es_service.py  hbase_service.py  kafka_service.py  nlp_service.py
backend/app/models/: product.py  review.py
backend/app/schemas/: product.py  review.py
backend/tests/: test_api.py  test_services.py
dags/: ecommerce_pipeline.py
docker/airflow/: Dockerfile
docker/backend/: Dockerfile
docker/elasticsearch/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: demo-guide.md  功能测试文档.md  数据字段说明.md  数据流转说明.md  电商数据洞察平台 - 项目答辩文档.md  电商数据洞察平台-项目演示v2.pptx  电商数据洞察平台-项目演示v3.pptx
docs/superpowers/plans/: 2026-06-15-project-implementation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
mock-data/: generate_monthly_sales.py  generate_products.py  generate_reviews.py  nlp_generator.py
mock-data/templates/: negative_templates.json  neutral_templates.json  positive_templates.json  product_templates.json
scripts/: compute_analysis.py  compute_review_analysis.py  generate_all.py  generate_ppt.py  generate_templates.py  init_data.py  kafka_consumer.py  run_pipeline.py
spark-jobs/: data_cleaning.py  nlp_analysis_job.py  product_analysis_job.py  trend_aggregation_job.py
(+8 files in other folders)
