[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.3.0",
    "setuptools>=70.0.0,<81.0.0",
    "elasticsearch==8.11.0",
    "fastapi>=0.100.0",
    "happybase==1.2.0",
    "httpx>=0.24.0",
    "jieba>=0.42.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyspark==3.5.0",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "python-dotenv==1.0.0",
    "snownlp>=0.12.3",
    "uvicorn>=0.23.0",
    "openai>=2.41.1",
]
